--- a/src/components/Notification/Notification.module.css
+++ b/src/components/Notification/Notification.module.css
@@ -1,7 +1,5 @@
 .message {
-    font-family: 'Apple Symbols', serif;
-    color: tomato;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
+  font-family: "Apple Symbols", serif;
+  color: tomato;
+  font-size: 20px;
 }
