--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,7 +1,5 @@
 .title {
-    display: flex;
-    justify-content: center;
-    font-family: 'Apple Symbols', serif;
-    font-size: 30px;
-    color: green;
+  font-family: "Apple Symbols", serif;
+  font-size: 30px;
+  color: green;
 }
